CI/CD: workflow de build & deploy con GitHub Actions

--- a/.github/workflows/azure-webapp-node.yml
+++ b/.github/workflows/azure-webapp-node.yml
@@ -38,4 +38,4 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: "<THE-WEATHER-APP>"
-          package: "."
+          package: src
