--- a/.github/workflows/azure-webapp-node.yml
+++ b/.github/workflows/azure-webapp-node.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Instalar dependencias (producción)
         run: npm ci --omit=dev
+        working-directory: src
 
       - name: Paso de build (opcional)
         run: npm run build || echo "No hay build, continuamos"
