CI/CD: workflow de build & deploy con GitHub Actions

--- a/.github/workflows/azure-webapp-node.yml
+++ b/.github/workflows/azure-webapp-node.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Desplegar a Azure App Service
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "<THE-WEATHER-APP>"
+          app-name: "<the-weather-app-demo>"
           package: src
